--- a/index.html
+++ b/index.html
@@ -5,12 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Churrascometro</title>
     <link rel="stylesheet" href=".\styles\style.css">
+    <link rel="icon" href="./img/beer.png">
 </head>
 <body>
 
+    <main>
+        
+        <main>
+            
+            <section id="left">
+                <h1>A Medida Certa Para o Seu Churasco</h1>
+
+                <img id="img-churrasco" src="./img/churrasco.png" alt="">
+            </section>
+
+            <section id="right">
+                <img id="img-churrascometro" src="./img/Churrascometro.png" alt="">
+
+                <p>Quantidade de Adultos</p>
+                <input id="adultos" name="adultos" type="number" placeholder="Adultos">
+
+                <p>Quantidade de Crianças</p>
+                <input id="criancas" name="criancas" type="number" placeholder="Criancas">
+
+                <p>Duração do Churrasco</p>
+                <input id="duracao" name="duracao" type="number" placeholder="Duração (h)">
+
+                <button id="calcular">Calcular</button>
+
+            </section>
+
+            <section>
+
+            </section>
+
+        </main>
+
+    </main>
 
 
-
-    <script src=".\scripts\script.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
+
+
+
+
+<!-- <a href="https://br.freepik.com/fotos-vetores-gratis/alimento">Alimento vetor criado por pch.vector - br.freepik.com</a>
+<a href="https://www.flaticon.com/free-icons/beer" title="beer icons">Beer icons created by catkuro - Flaticon</a> -->
