--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
         <main>
             
             <section id="left">
-                <h1>A Medida Certa Para o Seu Churasco</h1>
+                <h1>A Medida Certa Para o Seu Churasco!</h1>
 
                 <img id="img-churrasco" src="./img/churrasco.png" alt="">
             </section>
 
             <section id="right">
+
                 <img id="img-churrascometro" src="./img/Churrascometro.png" alt="">
 
                 <p>Quantidade de Adultos</p>
