--- a/index.html
+++ b/index.html
@@ -24,25 +24,53 @@
                 <img id="img-churrascometro" src="./img/Churrascometro.png" alt="">
 
                 <p>Quantidade de Adultos</p>
-                <input id="adultos" name="adultos" type="number" placeholder="Adultos">
+                <input id="adultos" name="adultos" type="tel" placeholder="Adultos">
 
                 <p>Quantidade de Crianças</p>
-                <input id="criancas" name="criancas" type="number" placeholder="Criancas">
+                <input id="criancas" name="criancas" type="tel" placeholder="Crianças">
 
                 <p>Duração do Churrasco</p>
-                <input id="duracao" name="duracao" type="number" placeholder="Duração (h)">
+                <input id="duracao" name="duracao" type="tel" placeholder="Duração (h)">
 
-                <button id="calcular">Calcular</button>
+                <button onclick="Calcular()" id="calcular">Calcular</button>
 
-            </section>
+                <div id="result">
 
-            <section>
+                    <div class="result-block">
+
+                        <img class="icon-result" src="./img/carne.svg" alt="carne">
+                        <p></p>
+
+                    </div>
+
+                    <div class="result-block">
+
+                        <img class="icon-result" src="./img/cerveja.svg" alt="cerveja">
+                        <p></p>
+
+                    </div>
+
+                    <div class="result-block">
+
+                        <img class="icon-result" src="./img/refri.svg" alt="bebida">
+                        <p></p>
+
+                    </div>
+
+                </div>
 
             </section>
 
         </main>
 
     </main>
+
+    <footer>
+        <p>
+            <a href="https://br.freepik.com/fotos-vetores-gratis/alimento">Alimento vetor criado por pch.vector - br.freepik.com  ||  </a>
+            <a href="https://www.flaticon.com/free-icons/beer" title="beer icons">Beer icons created by catkuro - Flaticon</a>
+        </p>
+    </footer>
 
 
     <script src="./scripts/script.js"></script>
@@ -52,5 +80,3 @@
 
 
 
-<!-- <a href="https://br.freepik.com/fotos-vetores-gratis/alimento">Alimento vetor criado por pch.vector - br.freepik.com</a>
-<a href="https://www.flaticon.com/free-icons/beer" title="beer icons">Beer icons created by catkuro - Flaticon</a> -->
