correcting a misspelling word

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             
             <section id="left">
                 <div id="container-left">
-                    <h1>A Medida Certa Para o Seu Churasco!</h1>
+                    <h1>A Medida Certa Para o Seu Churrasco!</h1>
                     
                     <img id="img-churrasco" src="./assets/churrasco.png" alt="">
                 </div>
